Fixed scrollbar styles in new Chrome releases and improved contrast in non-Webkit browsers

--- a/_sass/config.scss
+++ b/_sass/config.scss
@@ -22,6 +22,7 @@ $window-title-bar-color: #00007b;
 $window-bg-color: #bfbfbf;
 $window-border-highlight-color: #ffffff;
 $window-border-shadow-color: #7f7f7f;
+$scrollbar-handle-color: #848484;
 $scrollbar-bg-color: #d5d5d5;
 
 $table-bg-color: #ffffff;
